--- a/hugo.toml
+++ b/hugo.toml
@@ -2,7 +2,7 @@ baseURL = "https://coolxxy.github.io/"
 languageCode = "zh"
 title = "Coolxxy's Blog"
 theme = "yinyang"
-DefaultContentLanguage = "cn"
+defaultContentLanguage = "cn"
 
 [markup]
   [markup.goldmark]
